Add Chinese Translation

--- a/src/localization/zh/cheatsheet.json
+++ b/src/localization/zh/cheatsheet.json
@@ -1,51 +1,51 @@
 {
-  "cheatsheet.anchors": "Anchors",
-  "cheatsheet.caret.title": "Start of string or line",
-  "cheatsheet.caret.description": "Matches the beginning of the string or line.",
-  "cheatsheet.dollar.title": "End of string or line",
-  "cheatsheet.dollar.description": "Matches the end of the string or line.",
-  "cheatsheet.wordBoundary.title": "Word Boundary",
-  "cheatsheet.wordBoundary.description": "Matches the word character or position at the end of a word.",
-  "cheatsheet.notWordBoundary.title": "Not Word Boundary",
-  "cheatsheet.notWordBoundary.description": "Matches a word character or position that is not at the end of a word.",
+  "cheatsheet.anchors": "锚点",
+  "cheatsheet.caret.title": "字符串或行的开头",
+  "cheatsheet.caret.description": "匹配字符串或行的开头。",
+  "cheatsheet.dollar.title": "字符串或行的结尾",
+  "cheatsheet.dollar.description": "匹配字符串或行的结尾。",
+  "cheatsheet.wordBoundary.title": "单词边界",
+  "cheatsheet.wordBoundary.description": "匹配单词字符或单词末尾的位置。",
+  "cheatsheet.notWordBoundary.title": "非单词边界",
+  "cheatsheet.notWordBoundary.description": "匹配不在单词末尾的单词字符或位置。",
 
-  "cheatsheet.characterClasses": "Character Classes",
-  "cheatsheet.characterSet.title": "Character Set",
-  "cheatsheet.characterSet.description": "Matches any character in the set.",
-  "cheatsheet.negatedCharacterSet.title": "Negated Character Set",
-  "cheatsheet.negatedCharacterSet.description": "Matches any character not in the set.",
-  "cheatsheet.range.title": "Range",
-  "cheatsheet.range.description": "Matches all characters between two characters, including themselves.",
-  "cheatsheet.dot.title": "Dot",
-  "cheatsheet.dot.description": "Matches any character except line breaks.",
-  "cheatsheet.word.title": "Word",
-  "cheatsheet.word.description": "Matches any alphanumeric character. Including the underline.",
-  "cheatsheet.notWord.title": "Not Word",
-  "cheatsheet.notWord.description": "Matches any non-alphanumeric character.",
-  "cheatsheet.digit.title": "Digit",
-  "cheatsheet.digit.description": "Matches any numeric character.",
-  "cheatsheet.notDigit.title": "Not Digit",
-  "cheatsheet.notDigit.description": "Matches any non-numeric character.",
-  "cheatsheet.space.title": "Whitespace",
-  "cheatsheet.space.description": "Matches any whitespace character.",
-  "cheatsheet.notSpace.title": "Not Whitespace",
-  "cheatsheet.notSpace.description": "Matches any non-whitespace character.",
+  "cheatsheet.characterClasses": "字符类",
+  "cheatsheet.characterSet.title": "字符集合",
+  "cheatsheet.characterSet.description": "匹配集合中的任意字符。",
+  "cheatsheet.negatedCharacterSet.title": "取反字符集合",
+  "cheatsheet.negatedCharacterSet.description": "匹配不在集合中的任意字符。",
+  "cheatsheet.range.title": "字符范围",
+  "cheatsheet.range.description": "匹配两个字符之间的所有字符，包括他们自己。",
+  "cheatsheet.dot.title": "点",
+  "cheatsheet.dot.description": "匹配除换行符以外的任意字符。",
+  "cheatsheet.word.title": "字",
+  "cheatsheet.word.description": "匹配任意字母数字。包括下划线。",
+  "cheatsheet.notWord.title": "非字",
+  "cheatsheet.notWord.description": "匹配任意非字母数字字符。",
+  "cheatsheet.digit.title": "数字",
+  "cheatsheet.digit.description": "匹配任意数字字符。",
+  "cheatsheet.notDigit.title": "非数字",
+  "cheatsheet.notDigit.description": "匹配任意非数字字符。",
+  "cheatsheet.space.title": "空白",
+  "cheatsheet.space.description": "匹配任意空白字符。",
+  "cheatsheet.notSpace.title": "非空白",
+  "cheatsheet.notSpace.description": "匹配任意非空白字符。",
 
-  "cheatsheet.flags": "Flags",
-  "cheatsheet.caseInsensitiveFlag.title": "Ignore Case",
-  "cheatsheet.caseInsensitiveFlag.description": "Makes the expression case insensitive.",
-  "cheatsheet.globalFlag.title": "Global",
-  "cheatsheet.globalFlag.description": "Ensures that the expression does not stop on the first match.",
-  "cheatsheet.multilineFlag.title": "Multiline",
-  "cheatsheet.multilineFlag.description": "If not enabled, line start and end equals the beginning and end of the entire string. It doesn't work for each row individually.",
+  "cheatsheet.flags": "标志",
+  "cheatsheet.caseInsensitiveFlag.title": "忽略大小写",
+  "cheatsheet.caseInsensitiveFlag.description": "使表达式不区分大小写。",
+  "cheatsheet.globalFlag.title": "全局匹配",
+  "cheatsheet.globalFlag.description": "查找所有匹配而非在找到第一个匹配后停止。",
+  "cheatsheet.multilineFlag.title": "多行匹配",
+  "cheatsheet.multilineFlag.description": "更改 ^ 和 $ 的含义，使它们分别在任意一行的行首和行尾匹配，而不仅仅在整个字符串的开头和结尾匹配。",
 
-  "cheatsheet.groupAndReferences": "Group & References",
-  "cheatsheet.group.title": "Group",
-  "cheatsheet.group.description": "Groups an expression.",
-  "cheatsheet.reference.title": "Reference",
-  "cheatsheet.reference.description": "References a grouped expression.",
-  "cheatsheet.nonCapturingGroup.title": "Non Capturing Group",
-  "cheatsheet.nonCapturingGroup.description": "Makes a grouping that cannot be referenced.",
+  "cheatsheet.groupAndReferences": "分组 & 引用",
+  "cheatsheet.group.title": "分组",
+  "cheatsheet.group.description": "对表达式进行分组，并捕获匹配到的文本。",
+  "cheatsheet.reference.title": "引用",
+  "cheatsheet.reference.description": "引用分组所捕获的文本。",
+  "cheatsheet.nonCapturingGroup.title": "非捕获组",
+  "cheatsheet.nonCapturingGroup.description": "进行分组，并且不捕获匹配的文本。",
 
   "cheatsheet.lookarounds": "Lookarounds",
   "cheatsheet.positiveLookahead.title": "Positive Lookahead",
@@ -53,15 +53,15 @@
   "cheatsheet.positiveLookbehind.title": "Positive Lookbehind",
   "cheatsheet.negativeLookbehind.title": "Negative Lookbehind",
 
-  "cheatsheet.quantifiersAndAlternation": "Quantifiers And Alternation",
-  "cheatsheet.plus.title": "Plus",
-  "cheatsheet.plus.description": "Expression matches one or more.",
-  "cheatsheet.asterisk.title": "Asterisk",
-  "cheatsheet.asterisk.description": "Expression matches zero or more.",
-  "cheatsheet.quantifier.title": "Quantifier",
-  "cheatsheet.quantifier.description": "Expression matches within specified ranges.",
-  "cheatsheet.optional.title": "Optional",
-  "cheatsheet.optional.description": "Makes the expression optional.",
-  "cheatsheet.alternation.title": "Alternation",
-  "cheatsheet.alternation.description": "Or it works like. It waits for one of the expressions it reserved to match."
+  "cheatsheet.quantifiersAndAlternation": "量词和替代",
+  "cheatsheet.plus.title": "加号",
+  "cheatsheet.plus.description": "重复一次或更多次。",
+  "cheatsheet.asterisk.title": "星号",
+  "cheatsheet.asterisk.description": "重复零次或更多次。",
+  "cheatsheet.quantifier.title": "量词",
+  "cheatsheet.quantifier.description": "表达式匹配指定范围内的重复次数。",
+  "cheatsheet.optional.title": "可选",
+  "cheatsheet.optional.description": "重复零次或一次。",
+  "cheatsheet.alternation.title": "替换",
+  "cheatsheet.alternation.description": "从分组中选择其中一部分表达式进行匹配。"
 }
