--- a/src/localization/zh/general.json
+++ b/src/localization/zh/general.json
@@ -4,7 +4,7 @@
   "general.result": "结果",
   "general.regex": "RegEx",
   "general.text": "文本",
-  "general.completedStep": "步骤完成！",
+  "general.completedStep": "步骤完成!",
   "general.hintQuestion": "显示答案",
   "general.reportStep": "报告问题",
   "general.startLearning": "开始学习",
@@ -18,15 +18,15 @@
   "notFound.intro": "您要找的页面不存在。",
   "notFound.button": "回到主页",
 
-  "page.landing.title": "Regex Learn - Step by step, from zero to advanced.",
-  "page.learn.title": "Regex Learn - RegEx Interactive Course",
-  "page.cheatsheet.title": "Regex Learn - RegEx Cheatsheet",
-  "page.404.title": "Regex Learn - Not Found",
+  "page.landing.title": "Regex Learn - 一步一步，从入门到精通",
+  "page.learn.title": "Regex Learn - 正则表达式交互式课程",
+  "page.cheatsheet.title": "Regex Learn - 正则表达式速查表",
+  "page.404.title": "Regex Learn - 未找到页面",
 
-  "page.landing.description": "Learn RegEx interactively, practice at your level, test and share your own RegEx.",
-  "page.learn.description": "Learn RegEx step by step. Complete the interactive tutorial that will make your learning easier and faster.",
-  "page.cheatsheet.description": "Sometimes you just need to remember RegEx. Try the cheatsheet that will make it easier for you to understand and remember better.",
+  "page.landing.description": "以交互方式学习正则表达式，按照您的水平练习，测试和分享您自己的正则表达式。",
+  "page.learn.description": "一步一步学习正则表达式。完成交互式教程，这将使您的学习更轻松、更快捷。",
+  "page.cheatsheet.description": "有时您只需要记住正则表达式。试试速查表，它会让你更容易理解和更好地记住。",
 
-  "alert.site.under.development": "This site is still under development. What you see now may change.",
-  "learn.safari.unsupportWarning": "Regular expressions in this step are not supported by the Safari browser. If you have trouble getting past this step. You can click here."
+  "alert.site.under.development": "该网站仍在开发中。 你现在看到的内容可能会发生改变。",
+  "learn.safari.unsupportWarning": "Safari 浏览器不支持此步骤中的正则表达式。 如果您无法通过此步骤。 你可以点击这里。"
 }
